--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <input placeholder="Input a number between 1 and 100">
             <button>This is it!</button>
             <h3>5 Guesses Remaining</h3>
-            <button>Can I have a Hint Pleaseeee?</button>
-            <button>Start Over</button>
+            <button id="hint">Can I have a Hint Pleaseeee?</button>
+            <button id="restart">Start Over</button>
         </div>
     </body>
 </html>
