--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Guess the Number</title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Cherry+Swash|Raleway+Dots|Grand+Hotel' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Cherry+Swash|Raleway+Dots|Grand+Hotel' rel='stylesheet' type='text/css'>
+        <!-- <meta name="viewport" content="width=device-width, intial-scale=1.0"> -->
     </head>
     <body>
-        <div>
+        <div id='main'>
+            <div id="top">
             <h1>Guess the Number</h1>
-            <input placeholder="Input a number between 1 and 100">
-            <button>This is it!</button>
+            </div>
+            <input placeholder="guess a number between 1 and 100">
+            <button id="guess">This is it!</button>
             <h3>5 Guesses Remaining</h3>
             <button id="hint">Can I have a Hint Pleaseeee?</button>
             <button id="restart">Start Over</button>
